--- a/multiple.html
+++ b/multiple.html
@@ -8,7 +8,7 @@
     <style>
         body{ 
             background-color:skyblue ;
-            background-image:url(image2.webp),url(image1.webp),url(image3.webp),url(image4.webp),url(image5.jpg);
+            background-image:url('image2.webp'),url('image1.webp'),url('image3.webp'),url('image4.webp'),url('image5.jpg');
             background-size:200px,200px,200px,200px,500px;
             background-repeat:no-repeat ;
             background-attachment:fixed ;
